--- a/src/main/resources/templates/domain/post/post/edit.html
+++ b/src/main/resources/templates/domain/post/post/edit.html
@@ -40,7 +40,13 @@
             <label>공개</label>
             <input type="checkbox" name="published" th:checked="${post.published}">
         </div>
-
+        <div>
+            <label>Minimum level</label>
+            <select name="minMembershipLevel" th:value="${post.minMembershipLevel}">
+                <option value="0">0</option>
+                <option value="1">1</option>
+            </select>
+        </div>
         <div>
             <label>제목</label>
             <input type="text" name="title" th:value="${post.title}">
