--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -31,7 +31,7 @@
     </div>
     <div>
         <h3>내용</h3>
-        <div style="white-space: pre-wrap;" th:text="${post.body}"></div>
+        <div style="white-space: pre-wrap;" th:text="${post.postDetailBody.val}"></div>
     </div>
     <hr>
     <div>
