--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -31,11 +31,12 @@
     </div>
     <div>
         <h3>내용</h3>
-        <div style="white-space: pre-wrap;" th:text="${post.postDetailBody.val}"></div>
+        <div style="white-space: pre-wrap;" th:text="${post.detailBody.val}"></div>
     </div>
     <hr>
     <div>
         <button onclick="history.back();">뒤로가기</button>
+
         <a th:if="${@postService.canModify(@rq.member, post)}" th:href="|/post/${post.id}/edit|">글 수정</a>
 
         <form th:if="${@postService.canLike(@rq.member, post)}" th:action="|/post/${post.id}/like|" method="post" style="display: inline;">
@@ -47,7 +48,8 @@
             <button type="submit">추천취소</button>
         </form>
 
-        <form th:if="${@postService.canDelete(@rq.member, post)}" th:action="|/post/${post.id}/delete|" method="post" style="display: inline;">
+        <form th:if="${@postService.canDelete(@rq.member, post)}"
+              th:action="|/post/${post.id}/delete|" method="post" style="display: inline;">
             <input type="hidden" name="_method" value="delete">
             <button type="submit" onclick="return confirm('정말로 삭제하시겠습니까?');">글 삭제</button>
         </form>
