--- a/src/main/resources/templates/domain/post/post/fragments/postListItem.html
+++ b/src/main/resources/templates/domain/post/post/fragments/postListItem.html
@@ -11,6 +11,26 @@
     </a>
     <div th:text="${post.createDate}">작성일</div>
     <div th:text="${post.minMembershipLevel}">레벨</div>
+    <div class="flex gap-2 mt-4">
+        <form th:if="${@postService.canLike(@rq.member, post)}"
+              th:action="|/post/${post.id}/like?redirectUrl=${@rq.encodedCurrentUrl}|" method="post" style="display: inline;">
+            <button type="submit">추천</button>
+        </form>
+
+        <form th:if="${@postService.canCancelLike(@rq.member, post)}"
+              th:action="|/post/${post.id}/cancelLike?redirectUrl=${@rq.encodedCurrentUrl}|" method="post" style="display: inline;">
+            <input type="hidden" name="_method" value="delete">
+            <button type="submit">추천취소</button>
+        </form>
+
+        <a th:if="${@postService.canModify(@rq.member, post)}" th:href="|/post/${post.id}/edit|">글 수정</a>
+
+        <form th:if="${@postService.canDelete(@rq.member, post)}"
+              th:action="|/post/${post.id}/delete?redirectUrl=${@rq.encodedCurrentUrl}|" method="post" style="display: inline;">
+            <input type="hidden" name="_method" value="delete">
+            <button type="submit" onclick="return confirm('정말로 삭제하시겠습니까?');">글 삭제</button>
+        </form>
+    </div>
 </div>
 </body>
 </html>
