--- a/src/main/resources/templates/domain/member/member/login.html
+++ b/src/main/resources/templates/domain/member/member/login.html
@@ -43,6 +43,10 @@
         </div>
 
         <button type="submit">로그인</button>
+        <hr>
+        <a class="btn btn-primary" href="/oauth2/authorization/kakao">
+            카카오 로그인
+        </a>
     </form>
 </div>
 
